apps/goatlint/src/snapshots/_--ignore-pattern _____.js --ignore-pattern _____.vue fixtures__cli__linter@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --ignore-pattern **/*.js --ignore-pattern **/*.vue fixtures/cli/linter
working directory: 
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 4 files with 126 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
