apps/goatlint/src/snapshots/_--ignore-pattern _____.js --ignore-pattern _____.vue fixtures__cli__linter@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --ignore-pattern **/*.js --ignore-pattern **/*.vue fixtures/cli/linter
working directory: 
----------
No files found to lint. Please check your paths and ignore patterns.
Finished in <variable>ms on 0 files with 93 rules using 1 threads.
----------
CLI result: LintNoFilesFound
----------
